--- a/config.json
+++ b/config.json
@@ -13,8 +13,8 @@
   "checkApproval": true,
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-  "nickNameBot": "-`ღ´🦋𝗠𝗮𝗹𝘃𝗶𝗻𝗮👀🔪",
-  "prefix": ".",
+  "nickNameBot": "DEVIL-2.0",
+  "prefix": "/",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
